--- a/.gitignore
+++ b/.gitignore
@@ -42,5 +42,15 @@ ENV/
 .coverage
 htmlcov/
 
+# OS
+.DS_Store
+Thumbs.db
+
+# Environment / Secrets
+.env
+.env.local
+*.pem
+credentials.*
+
 # Runtime
 .prd/
